[gd_scene load_steps=2 format=3 uid="uid://bydiqe2svrbra"]

[ext_resource type="Script" path="res://scripts/damage_area.gd" id="1_puh7f"]

[node name="DamageArea" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_puh7f")
damage_per_second = 5.1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
